chore(be): JVM 메모리 다이어트 - RSS creep OOM 근본 완화 (#263)
* chore(be): JVM 메모리 다이어트 - 힙/메타스페이스/코드캐시 상한 축소

RSS creep로 인한 주기적 OOM kill 방지를 위해 JVM 예약 총량을 줄인다.
힙 상한을 50%(256MB)에서 35%(~179MB)로, 메타스페이스를 160m에서 128m로
축소하고 코드캐시 상한(96m)을 신규 고정한다. 배포 후 실제 GC 종류
확정을 위해 -Xlog:gc도 추가한다.

* chore: CONTEXT.md 갱신 — PR #263 (JVM 메모리 다이어트)